--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,9 +2,19 @@
     padding: 0;
     margin: 0;
 }
-
 body {
     width: 100%;
     height: 100vh;
-    padding-top: 60px;
+    overflow-x: hidden;
+}
+::-webkit-scrollbar {
+    width: 8px; 
+}
+::-webkit-scrollbar-track {
+    background: #2364c4;
+}
+::-webkit-scrollbar-thumb {
+    background-color: #081c3b; 
+    border-radius: 10px; 
+    border: 2px solid #2364c4; 
 }
